Closed Bug 1377303 Opened 8 years ago Closed 8 years ago

Advanced Layers breaks rendering on Google Maps

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dvander, Assigned: dvander)

References

Details

Attachments

(2 files)

Screenshot is in bug 1375743. Pretty easy to reproduce by panning around.
This is a bug in texture coordinate flipping required for OpenGL textures, so it only manifests with WebGL.
Attached patch fixSplinter Review
I had copied texture coordinate flipping code from ImageHost, but ImageHost assumes the texture rect will always be (0, 0, 1, 1). Since AL uses a more precise region, we have to fully invert the y axis.
Attachment #8882619 - Flags: review?(matt.woodrow)
Attachment #8882619 - Flags: review?(matt.woodrow) → review+
Pushed by danderson@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/d4146ec1d551 Fix OpenGL texture coordinate flipping in Advanced Layers. (bug 1377303, r=mattwoodrow)
Attached patch reftestsSplinter Review
This takes an existing webgl reftest and just plops a div over it to reproduce the texture coordinate bug.
Attachment #8882647 - Flags: review?(matt.woodrow)
Whiteboard: keep-open
Attachment #8882647 - Flags: review?(matt.woodrow) → review+
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Flags: in-testsuite+
Whiteboard: keep-open
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: