Fix OpenGL texture coordinate flipping in Advanced Layers. (bug 1377303, r=mattwoodrow)